a_udemy/course2/09-networking/nginx-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        args: 
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-configuration
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
