a_udemy/course2/09-networking/gateway-example.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes: 
        namespaces: 
          from: All
# kubectl get gateways -n nginx-gateway
# kubectl describe gateway nginx-gateway -n nginx-gateway
